# gradio_imagemeasurement

./: README.md  pyproject.toml
backend/gradio_imagemeasurement/: __init__.py  imagemeasurement.py
demo/: app.py  requirements.txt  space.py
frontend/: Index.svelte  package-lock.json  package.json
frontend/shared/: ImageUploader.svelte
