[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_imagemeasurement"
version = "0.0.2"
description = "A component for measuring the distance in pixels between two points in an image."
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.10"
authors = [{ name = "Kirill Rybakov", email = "rybakov-ks@ya.ru" }]
keywords = ["gradio-custom-component", "gradio-template-Image", "image-measurement", "pixel-distance", "image-analysis", "computer-vision", "measurement-tool", "image-processing", "spatial-analysis", "distance-calculator", "image-annotation", "gradio-component"]
# Add dependencies here
dependencies = ["gradio>=4.0,<6.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.urls]
repository = "https://github.com/rybakov-ks/gradio_imagemeasurement"
homepage = "https://particleanalyzer.ru"

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = ["/backend/gradio_imagemeasurement/templates", "*.pyi"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_imagemeasurement"]
